# MOOS-Aquaticus

./: CMakeLists.txt  DEPENDENCIES_OSX.txt  JOYSTICK_DEPENDENCIES_OSX.txt  README_JOYSTK_DEPENDENCIES  README_SOUNDS  README_SPEECH_DEPENDENCIES  aqbits  build.sh
missions/REx4Follow/: launch_mokai.sh  meta_vehicle_mokai.moos
missions/alpha/: launch_m200.sh  meta_m200.bhv  plug_iM200.moos
missions/alpha_kayak/: launch_kayak_front_seat.sh  launch_m200.sh  launch_vehicle.sh  meta_m200.moos  meta_vehicle_fld_rtk.moos  plug_pShare.moos  plug_pShare_nostromo.moos  plug_uFldNodeBroker.moos  worked_targ_NOSTROMO.moos
missions/alpha_lawnmower/: plug_pMarinePID.moos
missions/aquaticus-USMA/: CADET_INSTRUCTIONS.txt  launch_simulation.sh
missions/aquaticus0.1/: launch_heron.sh  launch_m200.sh  launch_shoreside.sh  launch_simulation.sh  meta_heron.bhv  meta_heron.moos  meta_m200.bhv  meta_m200.moos  meta_shoreside.moos  plug_commandfolio.txt  plug_pLogger.moos  plug_pMarinePID.moos  plug_pRangeEvent.moos  plug_pShare.moos  plug_uSimMarine.moos
missions/aquaticus0.2/: plug_pBasicContactMgr.moos
missions/aquaticus1.0/: clean.sh  fabfile.py  launch_simulation.sh  plug_iSay.moos  plug_uFldNodeBroker.moos
missions/aquaticus1.1/: launch_simulation.sh
missions/aquaticus1.2.1/: launch_simulation.sh
missions/aquaticus2.0/: clean.sh  plug_uLoadWatch.moos
missions/button_record_speech_rec_test/: acoustic_model_files
missions/button_record_test/: README.txt  button_record_test.moos
missions/competition-2022/: README-MISSION-AUTONOMY  launch_demo.sh  plug_origin_warp.moos
missions/darpa_demo/: plug_pNodeReporter.moos  plug_pShare.moos
missions/defend_test/: launch.sh  meta_vehicle.bhv
missions/demo_competition/: launch.sh  launch_blue.sh  (+6 more)
scripts/: chk_dir.sh  create_rectangle.py  fabfile.py  pull_logs.sh
src/: CMakeLists.txt
src/app_aq_analysis/: CMakeLists.txt  main.cpp
src/app_catauthkey/: CatHandler.h
src/app_catauthkeys/: CatHandler.cpp
src/iActuationMokai/: ActMokai.cpp
src/iBlink/: Blinkstick.cpp  Blinkstick.h  iBlinkstick.moos
src/iBlinkstick/: Blinkstick.cpp  main.cpp
src/iButtonBox/: ButtonBox.cpp  ButtonBox.h  ButtonBox.ino  ButtonBox_Info.cpp  ButtonBox_Info.h  README_ARDUINO  iButtonBox.moos  main.cpp
src/iGPSDevice/: CMakeLists.txt  GPSDevice.cpp
src/iJoystick/: moosJoy.cpp  moosJoy.h  moosJoyInfo.cpp
src/iLEDInfoBar/: LEDInfoBar.cpp  LEDInfoBar.h  LEDInfoBar_Info.cpp  iLEDInfoBar.moos  iLEDInfoBar_enums.h  setup_arduino_IDE.sh
src/iLEDInfoBar/iLED_arduino_code/: iLEDInfoBar.ino
src/iLEDInterpreter/: LEDInterpreter.cpp  LEDInterpreter.h  iLEDInfoBar_enums.h  iLEDInterpreter.moos
src/iM200/: M200.cpp  M200_Info.cpp
src/iMumbleClient/: CMakeLists.txt  MumbleClient.cpp  MumbleClient.h
src/iOS5000/: os5000.cpp  os5000Info.cpp
src/iZephyrHRM/: CMakeLists.txt  ZephyrHRM.cpp  ZephyrHRM.h  ZephyrHRM_Info.cpp  iZephyrHRM.moos
src/iuModemMP/: uModemMiniPacketInfo.cpp
src/lib_behaviors-aq/: BHV_Cover.cpp  BHV_Cover.h  BHV_Defense_Collab.cpp  BHV_Defense_Collab.h  BHV_Defense_Multi.cpp  BHV_Defense_Multi.h  BHV_Defense_Revised.cpp  BHV_SimpleDefend.cpp  BHV_SimpleDefend.h  CMakeLists.txt  NodeReport.cpp
src/lib_behaviors-test/: BHV_Defense.cpp
src/pAttackCommander/: AttackCommander.cpp  CMakeLists.txt
src/pAuthority/: Authority.cpp  Authority.h
src/pBotDialog/: BotDialog.cpp  BotDialog.h
src/pComms_client/: CMakeLists.txt  Comms_client.cpp  Comms_client.h  Comms_client_Info.cpp  UDPConnect.cpp  pComms_client.moos
src/pComms_server/: CMakeLists.txt  ClientConnec.cpp  ClientConnec.h  Comms_server.cpp  Comms_server.h  Comms_server_Info.cpp  UDPConnect.cpp  UDPConnect.h  pComms_server.moos
src/pEvalLoiter/: CMakeLists.txt  EvalLoiter.cpp  EvalLoiter_Info.cpp
src/pFlagStrategy/: CMakeLists.txt  FlagStrategy.cpp  FlagStrategy.h
src/pMapValues/: mainmapValues.cpp  mapAxis.cpp  mapAxis.h  mapButton.cpp  mapButton.h  mapRange.cpp  mapRange.h  mapTrigger.cpp  mapTrigger.h  mapValues.cpp  mapValues.h  mapValuesInfo.cpp
src/pRangeEvent/: RangeEvent.cpp  RangeEvent.h  RangeEvent_Info.cpp  pRangeEvent.moos
src/pRecord/: CMakeLists.txt  README.txt  Record.cpp  Record.h  Record_Info.cpp  pRecord.moos
src/pReliable/: Reliable.cpp
src/pZoneTrackOpponents/: CMakeLists.txt  ZoneTrackOpponents.cpp  ZoneTrackOpponents.h  ZoneTrackOpponents_Info.cpp  ZoneTrackOpponents_Info.h  main.cpp  pZoneTrackOpponents.moos
src/uDialogManager/: CMakeLists.txt  DialogManager.cpp  DialogManager.h  DialogManager_3_0.cpp  DialogManager_3_0.h  DialogManager_4_0.cpp  DialogManager_4_0.h  DialogManager_5_0.cpp  DialogManager_5_0.h  DialogManager_Info.cpp  DialogManager_Info_4_0.cpp  DialogManager_Info_4_0.h  DialogManager_Info_5_0.cpp  main_4_0.cpp  test4.0.moos  uDialogManager.moos  uDialogManager_4_0.moos  uDialogManager_5_0.moos
src/uDialogManager_2_0/: CMakeLists.txt  DialogManager.cpp  uDialogManager_2_0.moos
src/uFldFlagManager/: CMakeLists.txt  FlagManager.cpp  FlagManager.h  FlagManager_Info.cpp  notes.txt
src/uFldFlagMgr/: CMakeLists.txt  FlagManager.cpp  FlagManager.h  FlagManager_Info.cpp
src/uFldTagManager/: CMakeLists.txt  TagManager.cpp  TagManager.h  TagManager_Info.cpp  TagManager_Info.h  VTag.cpp  VTag.h
src/uFldZoneEvent/: CMakeLists.txt  ZoneEvent.cpp  ZoneEvent.h  ZoneEvent_Info.cpp  uFldZoneEvent.moos
src/uFleetManager/: CMakeLists.txt  README  build.sh  build_and_run.sh  sudo_permissions.txt  test  test.moos  user_guide.tex
src/uFleetManager/src/: Configuration.cpp  Configuration.h  Constants.h  ManagedMoosMachine.cpp  ManagedMoosMachine.h  main.cpp  system_call.cpp  system_call.h  ui.cpp  ui.h  utils.cpp  utils.h
src/uNetMon/: .FleetMon.cpp.swo  CMakeLists.txt
src/uSpeechRec/: CMakeLists.txt  SpeechRec.cpp  SpeechRec.h  SpeechRec_2_0.cpp  SpeechRec_2_0.h  SpeechRec_3_0.cpp  SpeechRec_Info.cpp  SpeechRec_Info.h  SpeechRec_Info_2_0.cpp  SpeechRec_Info_2_0.h  main.cpp  main_2_0.cpp  uSpeechRec.moos
src/uSpeechRec/grammar/: alpha.dict  alpha.grammar  alpha.term  alpha.voca
src/uVcGenMon/: VcGenMon.cpp
(+496 files in other folders)
